# DNA-Sequence-Alignment-Tool

./: .gitignore  Cargo.toml
src/: main.rs
